--- a/templates/accounts/registerLaboratory.html
+++ b/templates/accounts/registerLaboratory.html
@@ -1,4 +1,4 @@
-{%load static%}
+{%load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +10,7 @@
 <body class="bg-light">
 
 <div class="container mt-5">
-    <form action="{% url 'registerUser' %}" method="POST">
+    <form action="{% url 'registerLaboratory' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-row">
             <div class="form-group col-md-4">
@@ -23,7 +23,25 @@
                 {{form.last_name}}
             </div>
         </div>
-    
+        
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="firstname">Laboratory Name:</label>
+                {{clinic_form.clinic_name}}
+        </div>
+
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="firstname">citizen id:</label>
+                {{clinic_form.citizen_id}}
+            </div>
+
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="firstname">Laboratory license:</label>
+                {{clinic_form.clinic_license}}
+        </div>
+
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="phone">Phone:</label>
@@ -36,6 +54,18 @@
             </div>
         </div>
     
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="firstname">city:</label>
+                {{clinic_form.city}}
+        </div>
+
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="firstname">address</label>
+                {{clinic_form.address}}
+            </div>
+
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="pass">Password:</label>
