--- a/templates/home.html
+++ b/templates/home.html
@@ -24,9 +24,8 @@
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="login-option">
                     <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register"> Login </a> / <span><a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="{% url 'registerUser' %}"> Register </a></span>
-                    <a class="get-start-btn" href="register-restaurant.html">
-                        Registerc 
-                        Restaurant
+                    <a class="get-start-btn" href="{% url 'roleClass' %}">
+                        Register clinic
                     </a>
                 </div>
             </div>
