--- a/templates/accounts/registerClinic.html
+++ b/templates/accounts/registerClinic.html
@@ -1,102 +1,125 @@
-{%load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Registration Page</title>
+    <title>Clinic Registration</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'your_custom.css' %}">
 </head>
 <body class="bg-light">
 
 <div class="container mt-5">
-    <form action="{% url 'registerClinic' %}" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="firstname">First Name:</label>
-                {{form.first_name}}
-            </div>
-    
-            <div class="form-group col-md-4">
-                <label for="lastname">Last Name:</label>
-                {{form.last_name}}
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="text-center">Clinic Registration</h2>
+                </div>
+                <div class="card-body">
+                    <form action="{% url 'registerClinic' %}" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+
+                        <!-- Personal Information -->
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="firstname">First Name:</label>
+                                {{ form.first_name }}
+                            </div>
+
+                            <div class="form-group col-md-6">
+                                <label for="lastname">Last Name:</label>
+                                {{ form.last_name }}
+                            </div>
+                        </div>
+
+                        <!-- Clinic Information -->
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="clinicname">Clinic Name:</label>
+                                {{ clinic_form.clinic_name }}
+                            </div>
+
+                            <div class="form-group col-md-6">
+                                <label for="citizenid">Citizen ID:</label>
+                                {{ clinic_form.citizen_id }}
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="cliniclicense">Clinic License:</label>
+                                {{ clinic_form.clinic_license }}
+                            </div>
+                        </div>
+
+                        <!-- Contact Information -->
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="phone">Phone:</label>
+                                {{ form.phone_number }}
+                            </div>
+
+                            <div class="form-group col-md-6">
+                                <label for="email">Email:</label>
+                                {{ form.email }}
+                            </div>
+                        </div>
+
+                        <!-- Clinic Location -->
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="city">City:</label>
+                                {{ clinic_form.city }}
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="address">Address:</label>
+                                {{ clinic_form.address }}
+                            </div>
+                        </div>
+
+                        <!-- Passwords -->
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label for="pass">Password:</label>
+                                {{ form.password }}
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="repass">Password Confirmation:</label>
+                                {{ form.confirm_password }}
+                            </div>
+                        </div>
+
+                        <!-- Submit Button -->
+                        <button type="submit" class="btn btn-primary btn-block">Submit</button>
+
+                        <!-- Display Form Errors -->
+                        <ul class="errorlist mt-3">
+                            {% for field in form %}
+                                {% if field.errors %}
+                                    {% for error in field.errors %}
+                                        <li class="text-danger">{{ error }}</li>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endfor %}
+                            <li class="text-danger">{{ form.non_field_errors }}</li>
+                        </ul>
+
+                        <!-- Display Success Messages -->
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-success mt-3" role="alert">{{ message }}</div>
+                            {% endfor %}
+                        {% endif %}
+                    </form>
+                </div>
             </div>
         </div>
-        
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="firstname">clinic Name:</label>
-                {{clinic_form.clinic_name}}
-        </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="firstname">citizen id:</label>
-                {{clinic_form.citizen_id}}
-            </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="firstname">clinic license:</label>
-                {{clinic_form.clinic_license}}
-        </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="phone">Phone:</label>
-                {{form.phone_number}}    
-            </div>
-    
-            <div class="form-group col-md-6">
-                <label for="email">Email:</label>
-                {{form.email}}
-            </div>
-        </div>
-    
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="firstname">city:</label>
-                {{clinic_form.city}}
-        </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="firstname">address</label>
-                {{clinic_form.address}}
-            </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="pass">Password:</label>
-                {{form.password}}
-            </div>
-            <div class="form-group col-md-6">
-                <label for="repass">Password Confirmation:</label>
-                {{form.confirm_password}}
-            </div>
-        </div>
-    
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <br><br>
-        <ul class="errorlist">
-            {% for field in form%}
-
-                {% if field.errors %}
-                    {% for error in field.errors%}
-                        <li style="color: red;">{{error}}</li>
-                    {% endfor %}
-                {% endif %}
-
-            {% endfor %}
-            <li style="color: red;">{{form.non_field_errors}}</li>
-        </ul>
-        {% if messages %}
-            {% for message in messages%}
-                <h1 class="alert alert-success" role="alert">{{message}}</h1>
-            {% endfor %}
-        {% endif %}
-    </form>    
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
