--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -7,28 +7,24 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header bg-primary text-white">
-                    <h1 class="text-center">Login</h1>
+                    <h1 class="text-center">Forgot password ?</h1>
                 </div>
                 <div class="card-body">
-                    <form action="{% url 'login' %}" method="POST" enctype="multipart/form-data">
+                    <h4 class="text-center">please enter your email address and we will send you a link to reset it.</h4>
+
+                    <form action="{% url 'forgot_password' %}" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group">
                             <label for="email">Email:</label>
                             <input type="email" name="email" class="form-control" placeholder="Enter email" required>
                         </div>
 
-                        <div class="form-group">
-                            <label for="password">Password:</label>
-                            <input type="password" name="password" class="form-control" placeholder="Enter password" required>
-                        </div>
+                        
 
                         <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                        <br>
-                        <a href="{% url 'forgot_password' %}" class="float_right">forgot password</a>
                     </form>
                 </div>
             </div>
-            {%include 'includes/alerts.html' %}
         </div>
     </div>
 </div>
