--- a/templates/accounts/registerLaboratory.html
+++ b/templates/accounts/registerLaboratory.html
@@ -118,6 +118,8 @@
                     </form>
                 </div>
             </div>
+            {%include 'includes/alerts.html' %}
+
         </div>
     </div>
 </div>
