--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-
+{%include 'includes/alerts.html'%}
 <section>
   <div class="container-fluid d-flex align-items-center justify-content-center my-3 py-2">
     <button class="btn btn-outline-primary rounded-circle p-2 mx-2 lh-1" type="button">
