--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -1,28 +1,30 @@
-{% extends 'base.html' %}
 
+{% extends 'base.html' %}
 {% block content %}
 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-primary text-white">
-                    <h1 class="text-center">Reset your password</h1>
+        <div class="col-md-4">
+            <div class="card rounded-5 shadow-lg">
+                <div class="card-body  text-primary">
+                    <h3 class="text-center">بازنشانی رمز عبور</h3>
                 </div>
                 <div class="card-body">
                     <form action="{% url 'reset_password' %}" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="email">Password:</label>
-                            <input type="password" name="password" class="form-control" placeholder="Enter password" required>
+                            <label for="email">رمز عبور:</label>
+                            <input type="password" name="password" class="form-control my-3" placeholder="رمز عبور را وارد کنید" required>
                         </div>
 
                         <div class="form-group">
-                            <label for="password">Confirm password:</label>
-                            <input type="password" name="confirm_password" class="form-control" placeholder="Confirm new password" required>
+                            <label for="password">تکرار رمز عبور:</label>
+                            <input type="password" name="confirm_password" class="form-control my-3" placeholder="رمز عبور را مجددا وارد کنید" required>
                         </div>
-
-                        <button type="submit" class="btn btn-primary btn-block">reset password</button>
+                        <div class="d-flex justify-content-center mt-4">
+                            <button type="submit" class="btn btn-primary btn-block">ثبت</button>
+                       
+                        </div>
                         <br>
                     </form>
                 </div>
@@ -31,5 +33,7 @@
         </div>
     </div>
 </div>
+</body>
+
 
 {% endblock %}
