--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -1,32 +1,48 @@
+
 {% extends 'base.html' %}
-
+{% load static%}
 {% block content %}
+<!DOCTYPE html>
+<html dir="rtl" lang="fa">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <style>
+         body {
+        background-image: "{% static 'images/bg5.jpg'%}";
+      }
 
+    </style>
+</head>
+
+<body>
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-primary text-white">
-                    <h1 class="text-center">Forgot password ?</h1>
+        <div class="col-md-5">
+            <div class="card rounded-5 shadow-lg">
+                <div class="card-body text-primary">
+                    <h4 class="text-center">فراموشی رمز عبور</h4>
                 </div>
                 <div class="card-body">
-                    <h4 class="text-center">please enter your email address and we will send you a link to reset it.</h4>
+                    <h6 class="text-center">لطفا ایمیل خود را وارد کنید ما لینکی برای بازنشانی آن برای شما ارسال خواهیم کرد.</h6>
 
                     <form action="{% url 'forgot_password' %}" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="email" name="email" class="form-control" placeholder="Enter email" required>
+                            <label for="email">ایمیل:</label>
+                            <input type="email" name="email" class="form-control my-2" placeholder="name@example.com" required>
                         </div>
-
-                        
-
-                        <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                    </form>
+                        <div class="d-flex justify-content-center mt-4">
+                            <button type="submit" class=" col-md-3 btn btn-primary btn-block">ثبت</button>
+                           
+                        </div>
+                      </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+</body>
 {% endblock %}
