--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,36 +1,48 @@
+
 {% extends 'base.html' %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <style>
+        body {
+       background-image: url(../static/bg5.jpg);
+     }
+     </style>
 
 {% block content %}
 
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-primary text-white">
-                    <h1 class="text-center">Login</h1>
+        <div class="col-md-4">
+            <div class="card  rounded-5 shadow-lg">
+                <div class="card-body text-primary">
+                    <h2 class="text-center">ثبت نام</h2>
                 </div>
                 <div class="card-body">
                     <form action="{% url 'login' %}" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="email" name="email" class="form-control" placeholder="Enter email" required>
+                            <label for="email">ایمیل:</label>
+                            <input type="email" name="email" class="form-control my-3" dir="rtl" placeholder="name@example.com" required>
                         </div>
 
                         <div class="form-group">
-                            <label for="password">Password:</label>
-                            <input type="password" name="password" class="form-control" placeholder="Enter password" required>
+                            <label for="password">رمز عبور:</label>
+                            <input type="password" name="password" class="form-control my-3" placeholder="رمز خود را وارد کنید" required>
                         </div>
-
-                        <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                        <br>
-                        <a href="{% url 'forgot_password' %}" class="float_right">forgot password</a>
+                    <div class="d-flex justify-content-center mt-4">
+                        <button type="submit" class=" col-md-3 btn btn-primary btn-block">ثبت</button>
+                       
+                    </div>
+                        <div class="mt-1">
+                            <a href="{% url 'forgot_password' %}" class="float_right text-decoration-none">فراموشی رمز عبور</a>
+                        </div>
+                        
                     </form>
                 </div>
             </div>
             {%include 'includes/alerts.html' %}
         </div>
     </div>
-</div>
+</div>  
 
 {% endblock %}
