--- a/templates/patients/patientDashboard.html
+++ b/templates/patients/patientDashboard.html
@@ -1,94 +1,95 @@
 
 {%extends 'base.html'%}
 
-{%load static%}
+{% load static %}
 {%block content%}
 
 <!DOCTYPE html>
 <html dir="rtl" lang="fa">
-<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/dashboard-rtl/">
-   
-    <meta charset="UTF-8">
+  <head>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
+      <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/dashboard-rtl/">
+    
+      <meta charset="UTF-8">
 
-    <title>پروفایل</title>
-</head>
-<body>
+      <style>
+        /* body {
+      background-image: url(../static/bg5.jpg);
+    } */
+    </style>
+      <title>پروفایل</title>
+  </head>
+  <body>
+
     <div class="container-fluid">
-        <div class="row g-2">
-            <div class="col-md-3">
-                <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px; height:640px;">
-                    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                            
-                        <span class="fs-4">{{user.first_name}} {{user.last_name}} : پروفایل </span>
-                    </a>
-                    <hr>
-                    <ul class="nav nav-pills flex-column mb-auto">
-                      <li class="nav-item">
-                        <a href="#" class="nav-link active" aria-current="page">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664z"/>
-                              </svg>
-                         اطلاعات کاربری
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#" class="nav-link link-body-emphasis">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-check" viewBox="0 0 16 16">
-                                <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z"/>
-                                <path d="M3 2.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 0 0-1h-.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1H12a.5.5 0 0 0 0 1h.5a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5z"/>
-                                <path d="M10.854 7.854a.5.5 0 0 0-.708-.708L7.5 9.793 6.354 8.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3Z"/>
-                              </svg>
-                         نوبت های من
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#" class="nav-link link-body-emphasis">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
-                                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
-                                <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
-                              </svg>
-                         کیف پول
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#" class="nav-link link-body-emphasis">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-patch-question" viewBox="0 0 16 16">
-                                <path d="M8.05 9.6c.336 0 .504-.24.554-.627.04-.534.198-.815.847-1.26.673-.475 1.049-1.09 1.049-1.986 0-1.325-.92-2.227-2.262-2.227-1.02 0-1.792.492-2.1 1.29A1.71 1.71 0 0 0 6 5.48c0 .393.203.64.545.64.272 0 .455-.147.564-.51.158-.592.525-.915 1.074-.915.61 0 1.03.446 1.03 1.084 0 .563-.208.885-.822 1.325-.619.433-.926.914-.926 1.64v.111c0 .428.208.745.585.745"/>
-                                <path d="m10.273 2.513-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911l-1.318.016z"/>
-                                <path d="M7.001 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0z"/>
-                              </svg>
-                         سوالات من
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#" class="nav-link link-body-emphasis">
-                          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-                         
-                        </a>
-                      </li>
-                    </ul>
-                    <hr>
-                    <div class="dropdown">
-                      <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="{% if user.userprofile.profile_picture %}{{ user.userprofile.profile_picture.url }}{% else %}{% static 'images/default.PNG' %}{% endif %}" alt="" width="32" height="32" class="rounded-circle me-2">                      
-                        <strong>نام کاربر</strong>
-                      </a>
-                      <ul class="dropdown-menu text-small shadow">
-                        <!-- <li><a class="dropdown-item" href="#">New project...</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
-                        <li><hr class="dropdown-divider"></li> -->
-                        <li><a class="dropdown-item" href="#">خروج</a></li>
-                        <li><a class="dropdown-item" href="#">تغییر رمز عبور</a></li>
-                      </ul>
-                    </div>
-                  </div>
+      <div class="row g-2">
+        <!-- navbar --> 
+        <div class="col-md-3">
+          <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px; height:640px;">
+              <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                      
+                  <span class="fs-4">{{user.first_name}} {{user.last_name}} : پروفایل </span>
+              </a>
+              <hr>
+              <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item">
+                  <a href="javascript:void(0)" class="nav-link active" aria-current="page" data-target="section1">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                          <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664z"/>
+                        </svg>
+                  اطلاعات کاربری
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="nav-link link-body-emphasis" data-target="section2">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-check" viewBox="0 0 16 16">
+                          <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z"/>
+                          <path d="M3 2.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 0 0-1h-.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1H12a.5.5 0 0 0 0 1h.5a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5z"/>
+                          <path d="M10.854 7.854a.5.5 0 0 0-.708-.708L7.5 9.793 6.354 8.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3Z"/>
+                        </svg>
+                  نوبت های من
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="nav-link link-body-emphasis" data-target="section3">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
+                          <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
+                          <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                        </svg>
+                  کیف پول
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="nav-link link-body-emphasis" data-target="section4">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-patch-question" viewBox="0 0 16 16">
+                          <path d="M8.05 9.6c.336 0 .504-.24.554-.627.04-.534.198-.815.847-1.26.673-.475 1.049-1.09 1.049-1.986 0-1.325-.92-2.227-2.262-2.227-1.02 0-1.792.492-2.1 1.29A1.71 1.71 0 0 0 6 5.48c0 .393.203.64.545.64.272 0 .455-.147.564-.51.158-.592.525-.915 1.074-.915.61 0 1.03.446 1.03 1.084 0 .563-.208.885-.822 1.325-.619.433-.926.914-.926 1.64v.111c0 .428.208.745.585.745"/>
+                          <path d="m10.273 2.513-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911l-1.318.016z"/>
+                          <path d="M7.001 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0z"/>
+                        </svg>
+                  سوالات من
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" class="nav-link link-body-emphasis" data-target="section5">
+                    <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
+                  
+                  </a>
+                </li>
+              </ul>
+              <hr>
+              <div class="dropdown">
+                <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                  <img src="{% if user.userprofile.profile_picture %}{{ user.userprofile.profile_picture.url }}{% else %}{% static 'images/default.PNG' %}{% endif %}" alt="" width="32" height="32" class="rounded-circle me-2">                                        <strong>نام کاربر</strong>
+                </a>
+                <ul class="dropdown-menu text-small shadow">
+                  <li><a class="dropdown-item" href="#">خروج</a></li>
+                  <li><a class="dropdown-item" href="#">تغییر رمز عبور</a></li>
+                </ul>
+              </div>
             </div>
-            
+        </div>
             <div class="d-flex col-md-9 justify-content-center align-items-center">
-                <form action ="{% url 'pprofile' %}" class="row" method="post" enctype="multipart/form-data">
+                <form action ="{% url 'pprofile' %}" class="row dashboard-section" method="post" enctype="multipart/form-data">
                     {%csrf_token%}
                     
                     <div class="col-md-3">
@@ -129,14 +130,111 @@
                       <button class="btn btn-primary" type="submit">ثبت</button>
                     </div>
                   </form>
+ 
+
+                  <!--section 2-->
+                  <div class="col-md-6 dashboard-section" id="section2">
+                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="d-flex">
+                            <div class="flex-shrink-0">
+                              <img src="{% static 'images/1.jpg'%}" alt="..." class="rounded" style="height: 100px; width: 100px;">
+                            </div>
+                            <div class="flex-column mt-2">
+                                <div class="flex ms-3">
+                                    <h4>نام کلینیک</h4>                      
+                                </div>
+                                
+                                <div class="flex ms-3 mt-4">
+                                    <strong>وضعیت:</strong>
+                                </div>
+                            </div>
+                            
+                          </div>
+                          <div class="row justify-content-center">
+                                <div class="col-md-4">
+                                    <strong>زمان:</strong>
+                                </div>
+                                <div class="col-md-4">
+                                    <strong>هزینه:</strong>
+                                </div>
+                                <div class="w-100"></div>
+                                
+                          </div>
+                          <div class="d-flex flex-row-reverse">
+                            <div class="p-2 ml-0">
+                                <button type="button" class="btn btn-outline-info">نظردهی</button>
+            
+                            </div>
+                          </div>
+                    </div>
+                  </div>
+                  <!--section3-->
+                  <div class="container w-50 dashboard-section" id="section3">
+      
+                    <div class="flex justify-content-around">
+                        <div class="d-flex flex-column">
+                            <div class="d-flex justify-content-center">
+                                <label for="exampleFormControlInput1" class="form-label">0 ریال </label>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <label for="exampleFormControlInput1" class="form-label">موجودی </label>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <div class="p-1 mx-5">
+                                    <button type="button" class="btn btn-primary btn-md ">افزایش موجودی</button>
+                                </div>
+                                
+                                <div class="p-1 mx-5">
+                                    <button type="button" class="btn btn-primary btn-md" style="width: 131px;">برداشت وجه</button>
+                                
+                                </div>
+                            </div>
+                            
+                        </div>
+                    
+                        <div class="d-flex flex-column mt-4  justify-content-center">
+                            <div class="d-flex justify-content-center">
+                                <div class="row flex-grow-1">
+                                    <div class="col-md-4 "> تراکنش های ماه اخیر </div>
+                                    <div class="col-md-6"></div>
+                                    <div class="col-md-2 ">مشاهده همه</div>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column mt-4 border border-success rounded px-2">
+                                <div class="d-flex flex-column">
+                                    <div class="row flex-grow-1 justify-content-evenly">
+                                        <div class="col-md-2 text-end">100000ریال</div>
+                                        <div class="col-md-8"></div>
+                                        <div class="col-md-2 text-center">موفق</div>
+                                    </div>
+                                    
+                                    <div class="row flex-grow-1 justify-content-evenly">
+                                        <div class="col-md-2 text-center">عنوان</div>
+                                        <div class="col-md-8"></div>
+                                        <div class="col-md-2 text-center">نوبت گیری</div>
+                                    </div>
+                                    <div class="row flex-grow-1 ">
+                                        <div class="col-md-4 ">تاریخ و ساعت</div>
+                                        <div class="col-md-4"></div>
+                                        <div class="col-md-4 text-end">1402/10/12 ، 18:58:10</div>
+                                    </div>
+                                </div>
+                                <div class="d-flex ">
+                                    
+                                </div>
+                            </div>
+                  </div>   
+                </div>
+              </div>
             </div>
-        </div>
-
-    </div>
+      
+          </div>
     
     
-
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      <script src="{%static 'js/dashboard.js'%}"></script>
+      
 </body>
 </html>
 {%include 'includes/alerts.html'%}
