--- a/templates/patients/patientDashboard.html
+++ b/templates/patients/patientDashboard.html
@@ -104,7 +104,7 @@
                     
                     <div class="col-md-3">
                       <label for="validationDefault02" class="form-label">کد ملی</label>
-                      <input type="text" class="form-control" name="last_name" required>
+                      <input type="text" class="form-control" name="citizen_id" required>
                     </div> 
                     
                     <div class="w-100"></div>
@@ -169,72 +169,115 @@
                     </div>
                   </div>
                   <!--section3-->
+
+                  
+                  
                   <div class="container w-50 dashboard-section" id="section3">
-      
-                    <div class="flex justify-content-around">
-                        <div class="d-flex flex-column">
-                            <div class="d-flex justify-content-center">
-                                <label for="exampleFormControlInput1" class="form-label">0 ریال </label>
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <label for="exampleFormControlInput1" class="form-label">موجودی </label>
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <div class="p-1 mx-5">
-                                    <button type="button" class="btn btn-primary btn-md ">افزایش موجودی</button>
-                                </div>
-                                
-                                <div class="p-1 mx-5">
-                                    <button type="button" class="btn btn-primary btn-md" style="width: 131px;">برداشت وجه</button>
-                                
-                                </div>
-                            </div>
-                            
+                    <form action="{% url 'showWalletInfo' %}" method="get"></form>
+                    {% if wallet_is_activated %}
+                     
+                      <div class="flex justify-content-around">
+                          <div class="d-flex flex-column">
+                              <div class="d-flex justify-content-center">
+                                  <label for="exampleFormControlInput1" class="form-label">تومان {{wallet.balance}}</label>
+                              </div>
+                              <div class="d-flex justify-content-center">
+                                  <label for="exampleFormControlInput1" class="form-label">موجودی </label>
+                              </div>
+                              <div class="d-flex justify-content-center">
+                                  <div class="p-1 mx-5">
+                                    <button type="button" class="btn btn-primary btn-md" data-bs-toggle="modal" data-bs-target="#increaseBalanceModal">افزایش موجودی</button>
+                                  </div>
+                                  
+                                  <div class="p-1 mx-5">
+                                      <button type="button" class="btn btn-primary btn-md" style="width: 131px;">برداشت وجه</button>
+                                  
+                                  </div>
+                              </div>
+                              
+                          </div>
+                      
+                          <div class="d-flex flex-column mt-4  justify-content-center">
+                              <div class="d-flex justify-content-center">
+                                  <div class="row flex-grow-1">
+                                      <div class="col-md-4 "> تراکنش های ماه اخیر </div>
+                                      <div class="col-md-6"></div>
+                                      <div class="col-md-2 ">مشاهده همه</div>
+                                  </div>
+                              </div>
+                              <div class="d-flex flex-column mt-4 border border-success rounded px-2">
+                                  <div class="d-flex flex-column">
+                                      <div class="row flex-grow-1 justify-content-evenly">
+                                          <div class="col-md-2 text-end">100000ریال</div>
+                                          <div class="col-md-8"></div>
+                                          <div class="col-md-2 text-center">موفق</div>
+                                      </div>
+                                      
+                                      <div class="row flex-grow-1 justify-content-evenly">
+                                          <div class="col-md-2 text-center">عنوان</div>
+                                          <div class="col-md-8"></div>
+                                          <div class="col-md-2 text-center">نوبت گیری</div>
+                                      </div>
+                                      <div class="row flex-grow-1 ">
+                                          <div class="col-md-4 ">تاریخ و ساعت</div>
+                                          <div class="col-md-4"></div>
+                                          <div class="col-md-4 text-end">1402/10/12 ، 18:58:10</div>
+                                      </div>
+                                  </div>
+                                  <div class="d-flex ">
+                                      
+                                  </div>
+                              </div>
+                          </div>   
                         </div>
-                    
-                        <div class="d-flex flex-column mt-4  justify-content-center">
-                            <div class="d-flex justify-content-center">
-                                <div class="row flex-grow-1">
-                                    <div class="col-md-4 "> تراکنش های ماه اخیر </div>
-                                    <div class="col-md-6"></div>
-                                    <div class="col-md-2 ">مشاهده همه</div>
-                                </div>
-                            </div>
-                            <div class="d-flex flex-column mt-4 border border-success rounded px-2">
-                                <div class="d-flex flex-column">
-                                    <div class="row flex-grow-1 justify-content-evenly">
-                                        <div class="col-md-2 text-end">100000ریال</div>
-                                        <div class="col-md-8"></div>
-                                        <div class="col-md-2 text-center">موفق</div>
-                                    </div>
-                                    
-                                    <div class="row flex-grow-1 justify-content-evenly">
-                                        <div class="col-md-2 text-center">عنوان</div>
-                                        <div class="col-md-8"></div>
-                                        <div class="col-md-2 text-center">نوبت گیری</div>
-                                    </div>
-                                    <div class="row flex-grow-1 ">
-                                        <div class="col-md-4 ">تاریخ و ساعت</div>
-                                        <div class="col-md-4"></div>
-                                        <div class="col-md-4 text-end">1402/10/12 ، 18:58:10</div>
-                                    </div>
-                                </div>
-                                <div class="d-flex ">
-                                    
-                                </div>
-                            </div>
-                  </div>   
-                </div>
+                      </form>
+                    {% else %}
+                    <form id="activateWalletForm" method="post" action="{% url 'activateWallet' %}">
+                      {% csrf_token %}
+                      <div class="d-flex flex-column text-center">
+                          <p>موجودی فعال نیست. <button type="submit" class="btn btn-primary btn-md">فعال‌سازی کیف پول</button></p>
+                      </div>
+                  </form>
+                {% endif %}
               </div>
             </div>
       
           </div>
     
     
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-      <script src="{%static 'js/dashboard.js'%}"></script>
-      
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="{% static 'js/dashboard.js' %}"></script>      
+         
+        
+        <!-- Modal for increasing balance -->
+        <div class="modal fade" id="increaseBalanceModal" tabindex="-1" role="dialog" aria-labelledby="increaseBalanceModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="increaseBalanceModalLabel">افزایش موجودی</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <form method="post" action="{% url 'increaseBalance' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="modal-body" style="max-height: 250%; overflow-y: auto; text-align: center;">
+                  <!-- Add your content for increasing balance here -->
+                  <p>لطفاً مبلغ مورد نظر را انتخاب کنید:</p>
+                  <div class="input-group mb-3">
+                    <span class="input-group-text">مبلغ (ریال)</span>
+                    <input type="number" class="form-control" placeholder="مبلغ مورد نظر" min="10000" max="200000" name="amount">
+                  </div>
+                </div>
+                <div class="modal-footer" style="text-align: center;">
+                  <button type="submit" class="btn btn-primary">ثبت</button>
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">بستن</button>
+                  {% include 'includes/alerts.html' %}
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+       
 </body>
 </html>
 {%include 'includes/alerts.html'%}
