comment and rating function - template update - clinic entity completion

--- a/templates/accounts/registerClinic.html
+++ b/templates/accounts/registerClinic.html
@@ -1,4 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -118,7 +122,6 @@
                     </form>
                 </div>
             </div>
-            {%include 'includes/alerts.html' %}
 
         </div>
     </div>
@@ -129,3 +132,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+{% endblock %}
