--- a/templates/accounts/registerUser.html
+++ b/templates/accounts/registerUser.html
@@ -1,4 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -82,8 +86,8 @@
                         {% endif %}
                     </form>
                 </div>
+
             </div>
-            {%include 'includes/alerts.html' %}
 
         </div>
     </div>
@@ -94,3 +98,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+{% endblock %}
