--- a/templates/clinics/clinicProfile.html
+++ b/templates/clinics/clinicProfile.html
@@ -1,7 +1,9 @@
-{%extends 'base.html'%}
-{%load static%}
-{%include 'includes/alerts.html'%}
-{%block content%}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+{%include 'includes/alerts.html' %}
+
 <!DOCTYPE html>
 <html dir="rtl" lang="fa">
 <head>
@@ -9,7 +11,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{%static 'css/clinics.css'%}">
+    <link rel="stylesheet" href="{% static 'css/clinic_page.css' %]">
    
 </head>
 <body>
@@ -17,8 +19,13 @@
         <div class="card rounded-2 shadow-lg my-5">
             <div class="row">
               <div class="col-md-3">
-                <img src="{{ MEDIA_URL }}{{clinic.user.userprofile.profile_picture.url}}" alt="" style="height: 220px; width: 220px; border-radius: 20%;">
-              </div>
+                {% if clinic.user.userprofile.profile_picture %}
+                <img src="{{ clinic.user.userprofile.profile_picture.url }}" alt="Profile Picture" style="height: 220px; width: 220px; border-radius: 20%;">
+
+              {% else %}
+              <img src="{%static 'images/default.PNG'%}" alt="Profile Picture" style="height: 220px; width: 220px; border-radius: 20%;">
+
+              {% endif %}              </div>
               <div class="col-md-6 my-1">
                 <div class="d-flex flex-column">
                   <h3> نام کلینیک : {{clinic.clinic_name}}</h3>
@@ -28,6 +35,16 @@
                     آدرس کلینیک:
                     <span class="text-muted">{{clinic.address}}</span>
                   </strong>
+                  <div class="b-example-divider"></div>
+                  <strong>
+                    امتیاز کلینیک:
+                    {% if ratingAvg %}
+                        <span class="text-muted">{{ ratingAvg }}</span>
+                    {% else %}
+                        <span class="text-muted">هیچ امتیازی ثبت نشده است</span>
+                    {% endif %}
+                </strong>
+
                   <div class="b-example-divider"></div>
                   <a href="{%static 'images/loc.jpg'%}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
@@ -44,8 +61,16 @@
                     شماره تماس:{{clinic.user.phone_number}} </strong>
                 </div>                              
               </div>
-                <div class="col-md-2 d-flex flex-column justify-content-end">                             
-                  <button class="btn btn-outline-success mt-auto">رزرو نوبت</button>                                                       
+              <div class="col-md-2 d-flex flex-column">
+                <button type="button" class="btn btn-outline-secondary mx-auto my-3" data-bs-toggle="modal" data-bs-target="#addCommentModal">
+                  افزودن نظر
+                </button>
+                 <button class="btn btn-outline-success mt-auto mx-auto w-50">رزرو نوبت</button>                                                       
+              </div> 
+                <div class="col-md-2 d-flex flex-column">
+                  <button type="button" class="btn btn-primary w-50 mx-auto my-3" data-bs-toggle="modal" data-bs-target="#scoreModal">
+                    امتیازدهی
+                 </button>
                 </div> 
 
                     <div class="col-md-12 my-5">
@@ -58,8 +83,11 @@
                               </h2>
                               <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <label>معاینه دوره ای,  تهیه غذای سگ و گربه, واکسیناسیون,  کوتاه کردن موهای,  گرفتن ناخن ها,  چکاپ و تمیز کردن گوش ها معاینه و تشخیص بیماری
-                                        ُ اصلاح کردن نو  کوتاه کردن پره فروش غذای پرنده  چه زمانی بایستی به دامپزشکی مراجعه نمودبیحال بودن حیوان و بی اشتهایی برای بالاتر از یک رو  اسهال و استفراغ داشت  باز نگه داشتن طولانی    تغییرات غیرعادی در اندام های ب  چرخیدن غیر عادی بدورخود    تغییرات در راه رفتن</label>
+                                  {%if clinicSetting.description %}
+                                      <label>{{clinicSetting.description}}</label>
+                                  {%else%}
+                                    <label>کلینیک هیچ توضیحی ارائه نداده است</label>
+                                  {%endif%}
                                </div>
                               </div>
                             </div>
@@ -71,7 +99,7 @@
                               </h2>
                               <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <label>روز های زوج 9 صبح تا 4 عصر <br> روز های فرد 2 بعد از ظهر تا 8 شب </label>
+                                    <label> {{clinicSetting.closing_time}} تا   از {{clinicSetting.opening_time}}</label>
                                   </div>
                               </div>
                             </div>
@@ -81,24 +109,18 @@
                                   <strong>نظرات</strong>
                                 </button>
                               </h2>
-                              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                                <div class=" row accordion-body">
-                                 <div class="col-md-3 my-2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
-                                    <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"/>
-                                  </svg><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
-                                    <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"/>
-                                  </svg><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
-                                    <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"/>
-                                  </svg></div>  
-                                  <div class="col-md-6 my-2">متن نظر</div>
-                                  <div class="col-md-3 my-2">تاریخ ثبت نظر</div>
-                                  <div class="col-md-12">
-                                    <textarea class="form-control my-2" id="exampleFormControlTextarea1" placeholder="نظر شما" rows="1"></textarea>
-                                  </div>
-                                  <div class="d-flex flex-row-reverse my-3">
-                                    <button type="button" class="btn btn-outline-secondary">ثبت نظر</button>
-                                  </div>
-                                </div>
+                              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample"><br>
+                                {% if comments %}
+                                <ul>
+                                  {% for comment in comments %}
+                                    <li>
+                                      {{ comment.patient.first_name}} {{ comment.patient.last_name}}  :  {{ comment.comment_text }}
+                                    </li>
+                                  {% endfor %}
+                                </ul>
+                              {% else %}
+                                <p>کامنتی وجود ندارد</p>
+                              {% endif %}
                               </div>
                             </div>
                             <div class="accordion-item">
@@ -125,37 +147,90 @@
                     </div>
             </div>
 
+            
             <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner rounded-2">
-                  <div class="carousel-item active">
-                    <img src="{% static 'imagess/c2.jpg'%}" class="d-block w-100 " style=" height: 400px;" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="{%static 'images/c3.jpg'%}" class="d-block w-100"style=" height: 400px;" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="{%static 'images/c4.jpg'%}" class="d-block w-100"style=" height: 400px;" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
+              <div class="carousel-inner rounded-2">
+                <div class="carousel-item active">
+                  <img src="{% static 'imagess/c2.jpg'%}" class="d-block w-100 " style=" height: 400px;" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="{%static 'images/c3.jpg'%}" class="d-block w-100"style=" height: 400px;" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="{%static 'images/c4.jpg'%}" class="d-block w-100"style=" height: 400px;" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
 
         </div>
-    </div>      
+    </div>  
+    
+
+    <div class="modal fade" id="addCommentModal" tabindex="-1" aria-labelledby="addCommentModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addCommentModalLabel">افزودن نظر</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form action="{% url 'putComment' clinic_id=clinic.id %}" method="POST">
+              {% csrf_token %}
+              <div class="mb-3">
+                  <label for="commentText" class="form-label">متن نظر</label>
+                  <textarea class="form-control" id="commentText" name="comment_text" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">ثبت نظر</button>
+          </form>
+          </div>
+          <div class="modal-footer">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="scoreModal" tabindex="-1" aria-labelledby="scoreModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="scoreModalLabel">امتیازدهی</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <form action="{%url 'putRating' clinic_id=clinic.id %}" method="post">
+            {% csrf_token %}
+          <div class="modal-body">
+            <p>لطفاً امتیاز خود را وارد کنید (از 1 تا 5):</p>
+            <input type="number" id="scoreInput" min="1" max="5" class="form-control" name="score"/>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">ثبت امتیاز</button>
+          </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  
+  <script src="{% static 'js/clinic_page.js'%}"></script>
+  
+
+
 </body>
 </html>
-
-
-{%endblock%}
+{% endblock %}
