--- a/templates/clinics/clinicDashboard.html
+++ b/templates/clinics/clinicDashboard.html
@@ -4,9 +4,8 @@
 {% load static %}
 {%block content%}
 
-<!DOCTYPE html>
 <html dir="rtl" lang="fa">
-  <head>
+
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-nU14brUcp6StFntEOOEBvcJm4huWjB0OcIeQ3fltAfSmuZFrkAif0T+UtNGlKKQv" crossorigin="anonymous">
       <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/dashboard-rtl/">
     
@@ -165,39 +164,64 @@
 
                   <!--section 2-->
                   <div class="col-md-6 dashboard-section" id="section2">
+                    {% if not appointments%}
+                        <h1>هیچ نوبتی نگرفته اید</h1>
+                    {%else%}
+                    {%for appointment in appointments%}
                     <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                         <div class="d-flex">
                             <div class="flex-shrink-0">
-                              <img src="{% static 'images/1.jpg'%}" alt="..." class="rounded" style="height: 100px; width: 100px;">
+                                {% if appointment.patient.user.userprofile.profile_picture %}
+                                <img src="{{appointment.patient.user.userprofile.profile_picture.url}}" alt="..." class="rounded" style="height: 100px; width: 100px;">
+                
+                              {% else %}
+                              <img src="{%static 'images/default.PNG'%}" alt="Profile Picture" style="height: 220px; width: 220px; border-radius: 20%;">
+                
+                              {% endif %}
                             </div>
                             <div class="flex-column mt-2">
                                 <div class="flex ms-3">
-                                    <h4>نام کلینیک</h4>                      
+                
+                                    <h4> اسم نوبت گیر : {{appointment.patient.user.firstname}} {{appointment.patient.user.last_name}}</h4>                      
                                 </div>
-                                
+                                {%if appointment.notes%}
+                                <div class="flex ms-3 mt-4">              
+                                    <strong>اطلاعات اضافی : {{appointment.notes}} </strong>
+                                </div>
+                                {%else%}
                                 <div class="flex ms-3 mt-4">
-                                    <strong>وضعیت:</strong>
+                                    <strong>اطلاعات اضافی: کاربر اطلاعات اضافی نداده است</strong>
                                 </div>
+                                {%endif%}
                             </div>
                             
                           </div>
                           <div class="row justify-content-center">
                                 <div class="col-md-4">
-                                    <strong>زمان:</strong>
-                                </div>
-                                <div class="col-md-4">
-                                    <strong>هزینه:</strong>
+                                    <strong>تاریخ نوبت :{{appointment.appointment_datetime}}</strong>
                                 </div>
                                 <div class="w-100"></div>
                                 
                           </div>
+                          <div class="row justify-content-center">
+                
+                            <div class="col-md-4">
+                                <br>
+                                <strong>هزینه پرداخت شده : {{appointment.clinic.clinic_setting.cost}}</strong>
+                            </div>
+                            <div class="w-100"></div>
+                            
+                            </div>
                           <div class="d-flex flex-row-reverse">
                             <div class="p-2 ml-0">
-                                <button type="button" class="btn btn-outline-info">نظردهی</button>
-            
+                              <form action="{%url 'deleteAppointmentsClinic' appointment.id%}">
+                                <button type="button" class="btn btn-outline-info">حذف</button>
+                              </form>
                             </div>
                           </div>
                     </div>
+                    {%endfor%}
+                    {%endif%}
                   </div>
                   <!--section3-->
               <div class="container w-75 dashboard-section" id="section3">
@@ -328,9 +352,9 @@
                           <div class="p-1"><small>رمز عبور باید حداقل 8 کاراکتر باشد</small></div>
                           <label for="inputPassword5" class="form-label my-4">رمز عبور جدید</label>
                           <div class="w-100"></div>
-                          <input type="password" id="inputPassword5" class="form-control col-md-2" aria-describedby="passwordHelpBlock"placeholder="رمز عبور جدید" name="new_password1">
+                          <input type="password"  class="form-control col-md-2" aria-describedby="passwordHelpBlock"placeholder="رمز عبور جدید" name="new_password1">
                           <div class="w-100"></div>
-                          <input type="password" id="inputPassword5" class="form-control col-md-2 my-2" aria-describedby="passwordHelpBlock" placeholder="  تکرار رمز عبور جدید" name="new_password2">
+                          <input type="password"  class="form-control col-md-2 my-2" aria-describedby="passwordHelpBlock" placeholder="  تکرار رمز عبور جدید" name="new_password2">
                           <div class="w-100"></div>
                           <button class="btn btn-primary"  type="submit"> تغییر رمز عبور</button>
                            <div class="w-100"></div>
@@ -348,27 +372,26 @@
                   <h5>آیا مطمئن هستید می خواهید حساب خود را در سایت حذف کنید؟</h5>
                 </div>
                 <div>
-                <form action="{% url 'deleteClinicProfile'%}" method="post">
-                  {% csrf_token %}
-                  <button class="btn btn-primary" type="submit">
-                    بله
-                  </button>
-                </form>
+                  <form action="{% url 'deleteClinicProfile'%}" method="post">
+                    {% csrf_token %}
+                    <button class="btn btn-primary" type="submit">
+                      بله
+                    </button>
+                  </form>
                 </div>
               </div>
             </div>
-            </div>
-          </div>
-          
+          </div> 
       </div>
+        </div>
+    </div>
+    </div>        
 
-    
     
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       <!-- <script src="{%static 'js/dashboard.js'%}"></script> -->
       <script src="{%static 'js/dashboard.js'%}"></script>
-    </div>
       
 </body>
 </html>
