--- a/templates/clinics/clinicProfile.html
+++ b/templates/clinics/clinicProfile.html
@@ -65,13 +65,12 @@
                 <button type="button" class="btn btn-outline-secondary mx-auto my-3" data-bs-toggle="modal" data-bs-target="#addCommentModal">
                   افزودن نظر
                 </button>
-                 <button class="btn btn-outline-success mt-auto mx-auto w-50">رزرو نوبت</button>                                                       
               </div> 
                 <div class="col-md-2 d-flex flex-column">
-                  <button type="button" class="btn btn-primary w-50 mx-auto my-3" data-bs-toggle="modal" data-bs-target="#scoreModal">
-                    امتیازدهی
-                 </button>
-                </div> 
+                <button class="btn btn-outline-success mt-auto mx-auto w-50" data-bs-toggle="modal" data-bs-target="#appointmentModal">
+                    رزرو نوبت
+                </button>
+                </div>
 
                     <div class="col-md-12 my-5">
                         <div class="accordion" id="accordionExample">
@@ -222,13 +221,47 @@
         </div>
       </div>
     </div>
+
+ <!-- Original modal -->
+<div class="modal fade" id="appointmentModal" tabindex="-1" aria-labelledby="appointmentModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <!-- ... your existing modal content ... -->
+          <div class="modal-body">
+              <p>زمان نوبت خود را انتخاب کنید </p>
+              <div id="slot-container">
+                {% for slot in clinic.appointment_slots.all %}
+                    {% if slot.is_available %}
+                        <form method="post" action="{% url 'create_appointment' clinic_id=clinic.id slot_id=slot.id%}">
+                            {% csrf_token %}
+                            <input type="hidden" name="slot_id" value="{{ slot.id }}">
+                            <button class="btn btn-outline-primary" type="submit">
+                                {{ slot.start_time }} - {{ slot.end_time }}
+                            </button>
+                        </form>
+                    {% else %}
+                        <button class="btn btn-outline-secondary" disabled>
+                            {{ slot.start_time }} - {{ slot.end_time }} رزرو شده
+                        </button>
+                    {% endif %}
+                {% endfor %}
+            </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+
     
+ 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  
   <script src="{% static 'js/clinic_page.js'%}"></script>
-  
+  <!-- Add Popper.js before Bootstrap JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js" integrity="...">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="..." crossorigin="anonymous"></script>
+
 
 
 </body>
